# cs-project

./: CMakeLists.txt  makefile
include/: board.h  constants.h  event_handler.h  game.h  piece.h  texture_handler.h  windowing.h
src/: board.c  event_handler.c  game.c  main.c  math.c  piece.c  texture_handler.c  windowing.c
